# Paquete_Mike

./: README.md
Paquete_Mike/: README.md  pyproject.toml
Paquete_Mike/Paquete_Mike.egg-info/: PKG-INFO  SOURCES.txt
Paquete_Mike/scr/codigos/: Funciones_prueba.py  Multivariadas.py  Univariable.py
